cabal-version: 2.4
name: plegg
version: 0.2.0.0
synopsis: A semi-cross-platform interface for pledge(2) and unveil(2)
description: plegg offers a simple Haskell interface for OpenBSD's
             pledge(2) and unveil(2) such that this interface compiles
             but does nothing on non-OpenBSD operating systems.
bug-reports: https://github.com/varikvalefor/plegg/issues
license: Unlicense
author: Varik Valefor
maintainer: varikvalefor@aol.com
copyright: (c) Varik Valefor, 2022.  No rights reserved.
category: System

library
    exposed-modules:  Plegg
    build-depends:
      base ^>=4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
